# plotters-dioxus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
backend-dioxus/: Cargo.toml
backend-dioxus/src/: dioxus_backend.rs  lib.rs
demo/: Cargo.toml
demo/src/: main.rs
plotters-dioxus/: Cargo.toml
plotters-dioxus/src/: backend.rs  lib.rs  plotter.rs
