[package]
name = "plotters-dioxus"
version = "0.2.1"
edition = "2021"
license = "MIT"
resolver = "1"
description = "A plotters-rs component for dioxus"
readme = "../README.md"
repository = "https://github.com/DorianPinaud/plotters-dioxus"
keywords = ["dioxus", "plotters-rs", "plot", "chart", "drawing"]
authors = ["Dorian Pinaud dorian.pinaud@gmail.com"]
categories = ["visualization", "gui"]

[dependencies]
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
plotters = "0.3.5"
base64 = "0.21.7"
plotters-bitmap = "0.3.3"
image = "0.24.7"
